# bc-ble-core

./: Cargo.toml  README.md
src/: adapter.rs  c_utils.rs  callbacks.rs  connect.rs  constants.rs  lib.rs  runtime.rs  scan.rs  types.rs  write.rs
